--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,23 +1,26 @@
-#haystack
+# haystack
 haystack-ai==2.3.0
 
-#data process
+# data process
 datasets>=2.20.0
 markdown-it-py==3.0.0
 mdit_plain>=1.0.1
 pypdf==4.3.0
+pdfminer.six==20240706
 sentencepiece==0.2.0
 
-#vectordb
-pgvector-haystack==0.5.1
-faiss-gpu==1.7.2
+# file process
+aiofiles==23.2.1
 
-#web service
+# vectordb
+pgvector-haystack==0.5.1
+
+# web service
 fastapi==0.105.0
 websockets==12.0
 httpx==0.27.0
 uvicorn==0.28.0
 
-#other
+# other
 python-multipart==0.0.9
 colorlog==6.8.2 
